[metadata]
name = dale
version = 0.0.1
author = Ledger
author_email = hello@ledger.fr
description = Dummy APDU Logger, Explained
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/LedgerHQ/dale
project_urls =
    Bug Tracker = https://github.com/LedgerHQ/dale/issues
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8

[options]
package_dir=
        =src
packages = find:
include_package_data = True
python_requires = >=3.6
install_requires=
        protobuf>=3.19
        ecdsa
        cryptography

[options.packages.find]
where=src
exclude =
    tests

[options.entry_points]
console_scripts =
    dale = dale.logger:main

[options.extras_require]
tests=
        pytest
checkers=
        yapf
        toml
        flake8
        mypy

[flake8]
max-line-length = 120
extend-exclude = src/dale/exchange/pb,build
# ignore variable alignment
ignore = E221,E241

